# whatsapi

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.py
whatsapi_dj/: manage.py
whatsapi_dj/whatsapi_dj/: asgi.py  urls.py  wsgi.py
whatsapi_dj/whatsapi_dj/settings/: dirs.py  settings.py
